--- a/style.css
+++ b/style.css
@@ -1,168 +1,180 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
-
-header {
-    display: flex;
-    justify-content: space-between;
-    background-color:royalblue;
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    padding: 25px;
-    color: white;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    margin: 10px;
-    font-family: "Poppins", serif;
-    font-weight: 400;
-    font-style: normal
+    font-family: "Poppins", sans-serif;
+}
+
+header {
+    width: 100vw;
+    background-color: royalblue;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 25px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
 }
 
 .nama-bisnis {
-    margin: 10px;
-    font-family: "Poppins", serif;
-    font-weight: 700;
-    font-style: normal;
+    margin: 0 20px;
 }
 
-.p {
-    font-family: "Poppins", serif;
-    font-weight: 400;
-    font-style: normal
-}
-
-.navbar{
+.navbar {
+    list-style-type: none;
     display: flex;
-    justify-content: flex-end;
-    padding: 20px;
+}
+
+.navbar li {
+    margin-right: 20px;
+    margin-top: 15px;
 }
 
 .navbar li a {
     font-size: 18px;
-    display: flex;
     color: white;
-    margin: 10px;
-    right: 0;
-    left: 0;
     text-decoration: none;
+    font-weight: bold;
 }
 
-.navbar li {
-    margin-top: 20px;
-    justify-content: flex-end;
-    list-style: none;
-    transition: 0.3s;
-}
-
-.navbar li:hover {
+.navbar li a:hover {
     text-decoration: underline;
+}
+
+main {
+    margin-top: 150px;
+    padding: 20px;
 }
 
 .desc-company {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 200px;
-    margin-right: 150px;
-    margin-left: 100px;
-    margin-bottom: 70px;
-}
-
-.desc {
-    flex-direction: column;
+    margin-bottom: 50px;
+    margin: 40px;
 }
 
 .btn-selengkapnya {
-    display: inline-block;
     padding: 10px 20px;
-    color: black;
-    border: 1px solid black; 
+    border: 1px solid black;
     text-decoration: none;
+    color: black;
+    transition: all 0.3s ease;
 }
 
 .btn-selengkapnya:hover {
-    text-decoration: underline;
-}
-
-.service {
-    display: flex;
-    margin: 0;
-    flex-direction: column;
     background-color: royalblue;
     color: white;
 }
 
+.service {
+    background-color: royalblue;
+    color: white;
+    padding: 50px;
+    width: 100% 0;
+    text-align: center;
+}
+
 .layanan {
-    margin-left: 85px;
-    margin-top: 40px;
-    margin-right: 30px;
     width: 90%;
+    margin: 0 auto;
 }
 
 .table {
+    width: 90%;
+    margin: 20px auto;
     background-color: white;
     color: black;
-    width: 90%;
-    margin: 0 auto; 
-    padding: 10px auto;
-    margin-top: 50px;
-    margin-bottom: 60px;
     border-collapse: collapse;
-    border-spacing: 0 10px;
 }
 
-.desc-card {
-    display: flex;
-    flex-direction: column;
-    margin-left: 85px;
-    margin-right: 85px;
+.table th, .table td {
+    padding: 15px;
+    text-align: left;
+    border: 1px solid #ddd;
+}
+
+.product {
+    text-align: center;
+    padding: 50px 0;
 }
 
 .card-container {
     display: flex;
     justify-content: center;
-    gap: 40px; 
-    margin-top: 20px;
+    gap: 30px;
+    margin-top: 30px;
 }
 
 .card {
-    background-color: snow;
-    text-align: center;
-    border-radius: 20px;
+    background-color: white;
     padding: 20px;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     width: 250px;
-    height: 350px;
-    box-shadow: 30px 11px 16px 0px rgba(0,0,0,0.1);
 }
 
 .card img {
-    margin-bottom: 15px; 
+    width: 100%;
+    height: 150px;
+    object-fit: contain;
+    margin-bottom: 20px;
 }
 
 .card:hover {
-    box-shadow: 35px 15px 25px 0px rgba(0,0,0,0.2);
-}
-
-td {
-    padding: 10px;
+    background-color: royalblue;
+    color: white;
 }
 
 .contact-us {
-    margin-top: 80px;
-    margin-left: 85px;
+    padding: 50px 20px;
+    background-color: #f9f9f9;
+    text-align: center;
+}
+
+.contact-us form {
+    display: inline-block;
+    text-align: left;
+}
+
+.contact-us label {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.contact-us input, .contact-us textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.contact-us button {
+    padding: 10px 20px;
+    background-color: royalblue;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.contact-us button:hover {
+    background-color: darkblue;
 }
 
 footer {
-    margin-top: 50px;
-    margin-left: 85px;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    width: 100%;
+    background-color: royalblue;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
 }
