--- a/style.css
+++ b/style.css
@@ -159,11 +159,11 @@ main {
 
 .card img {
     width: 100%;
-    height: 150px;
-    object-fit: contain;
+    object-fit: contain; /* Keeps the full image visible without stretching */
     margin-bottom: 20px;
     transition: transform 0.3s ease;
 }
+
 
 .card:hover img {
     transform: scale(1.1); /* Efek zoom saat hover */
@@ -226,12 +226,19 @@ footer {
     nav {
         flex-direction: column;
         align-items: flex-start;
-        padding: 15px;
+        padding: 25px;
+        position: relative;
     }
 
     .btn-toggle {
-        display: block; /* Tampilkan tombol toggle */
-    }
+        display: block; /* Pastikan tombol ditampilkan */
+        position: absolute;
+        right: 15px; /* Atur posisi ke kanan */
+        top: 15px; /* Atur jarak dari atas */
+        color: white;
+        font-size: 1.5rem;
+        cursor: pointer;
+    }    
 
     .navbar {
         display: none;
@@ -246,6 +253,7 @@ footer {
 
     .navbar.active {
         display: flex; /* Navbar ditampilkan saat aktif */
+        align-items: center;
     }
 
     .navbar li {
@@ -254,32 +262,31 @@ footer {
     }
 
     .dropdown-menu {
-        flex-direction: column;
-        gap: 15px;
-        padding: 10px;
-        background: #393E46;
-        display: block;
+        display: none;
     }
 
     .desc-company {
-        flex-direction: column;
+        display: flex;
         align-items: center;
-        text-align: center;
+        text-align: justify;
+        width: 90%;
+        margin: 80px auto; 
     }
 
     .desc-company img {
-        max-width: 90%;
-        margin-top: 20px; /* Move image below text */
+        display: none;
     }
 
     .service, .product, .contact-us, .card-container {
         width: 100%;
         margin: 20px auto;
         padding: 10px;
+        justify-content: start;
     }
 
     .card {
-        width: 250px;
+        width: 100%; /* Make the card take full width on mobile */
+        max-width: 350px; /* Prevents the card from getting too large */
         margin: 10px auto;
     }
 
