--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ footer {
     nav {
         flex-direction: column;
         align-items: flex-start;
-        padding: 25px;
+        padding: 20px;
         position: relative;
     }
 
@@ -258,7 +258,7 @@ footer {
 
     .navbar li {
         margin: 10px 0;
-        text-align: left;
+        text-align: center;
     }
 
     .dropdown-menu {
@@ -268,9 +268,8 @@ footer {
     .desc-company {
         display: flex;
         align-items: center;
-        text-align: justify;
         width: 90%;
-        margin: 80px auto; 
+        margin: 20px auto; 
     }
 
     .desc-company img {
