--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ footer {
         flex-direction: column;
         align-items: flex-start;
         padding: 20px;
-        position: relative;
+        position: fixed;
     }
 
     .btn-toggle {
@@ -269,7 +269,7 @@ footer {
         display: flex;
         align-items: center;
         width: 90%;
-        margin: 20px auto; 
+        margin: 100px auto; 
     }
 
     .desc-company img {
